# Rust-StockTradingSimulator

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-client  README.md  Windows.md  diagram.drawio  diesel.toml  stack.yml  trunk.toml
client/: Cargo.toml  index.html  index.scss  trunk.toml
client/src/: app.rs  fetcher.rs  logged.rs  mod.rs
client/src/components/: company.rs  counter.rs  graph.rs  mod.rs  nav_element.rs  news_card.rs  portfolio.rs  register_modal.rs
client/src/components/company_page/: customize_modal.rs  mod.rs
client/src/components/home_page/: graph.rs  history.rs  mod.rs  portfolio.rs  usage.rs
client/src/cookie/: mod.rs
client/src/dto/: mod.rs  portfolio_dto.rs
client/src/fetcher/: button.rs  button_login.rs  button_poster.rs  immediate.rs  immediate_fetcher.rs  mod.rs
client/src/pages/: about.rs  chat.rs  company.rs  history.rs  history_page.rs  home.rs  logged.rs  login.rs  mod.rs  news.rs  search.rs  stocks.rs
client/src/pages/news_page/: mod.rs  news.rs
client/src/styles/: main.sass  yew-styles.css
migrations/2021-11-12-213231_create_initial_model/: down.sql  up.sql
migrations/2021-11-13-094848_change_stock_and_history/: down.sql  up.sql
migrations/2021-11-13-102757_store_command_types_as_varchar/: down.sql  up.sql
migrations/2021-11-13-134519_initial/: down.sql  up.sql
migrations/2021-11-13-171852_not_null_foreign_keys/: up.sql
migrations/2021-11-13-172350_command_not_null_fields/: up.sql
migrations/2021-11-13-180559_create_some_stocks/: up.sql
migrations/2021-11-14-115343_share_is_u32/: up.sql
migrations/2021-11-14-122534_rename_type_to_kind/: up.sql
migrations/2021-11-14-123559_make_kind_enum/: down.sql  up.sql
migrations/2021-11-17-164609_add_stocks_to_sell/: up.sql
migrations/2021-11-20-115253_add_news/: down.sql  up.sql
migrations/2021-11-20-125059_split_user_balance/: up.sql
migrations/2021-11-20-132517_add_created_at_to_command/: up.sql
migrations/2021-11-20-141444_add_share_to_stock/: up.sql
migrations/2021-11-20-150108_add_bought_and_sold_for_to_stock/: up.sql
migrations/2021-11-20-161043_create_stonker_with_some_stocks/: up.sql
migrations/2021-12-17-141438_add_news_effect/: up.sql
migrations/2021-12-17-142453_new_companies/: up.sql
migrations/2021-12-17-144440_news_not_null/: up.sql
migrations/2021-12-17-150318_rename-enums/: up.sql
migrations/2021-12-19-102715_history_without_nulls/: up.sql
migrations/2021-12-19-102851_stock_without_sold_for/: up.sql
migrations/2022-01-04-162326_auth/: up.sql
migrations/2022-01-04-205027_set_user_passwords/: up.sql
migrations/2022-01-11-114242_password_not_null/: up.sql
migrations/2022-01-11-132059_final_data/: up.sql
migrations/2022-01-11-201904_even_more_data/: up.sql
migrations/2022-02-02-195831_finale/: up.sql
server/: Cargo.toml
server/docs/: openapi.json
server/src/: main.rs  mod.rs  schema.rs
server/src/endpoints/: company_endpoints.rs  stock_endpoints.rs  stonker_endpoints.rs
server/src/models/: command.rs  company.rs  history.rs  mod.rs  stock.rs  stonker.rs
server/src/repos/: company_repo.rs  stock_repo.rs  stonker_repo.rs
server/src/schema/endpoints/: stock_endpoints.rs
server/src/schema/models/: command.rs  history.rs
server/src/schema/repos/: mod.rs  stock_repo.rs
server/src/server_data/: mod.rs  schema.rs
server/src/server_data/endpoints/: admin_endpoints.rs  api_error.rs  auth.rs  company_endpoints.rs  mod.rs  news_endpoints.rs  stock_endpoints.rs  stonker_endpoints.rs
server/src/server_data/models/: api_error.rs  command.rs  company.rs  history.rs  mod.rs  news.rs  stock.rs  stonker.rs
server/src/server_data/repos/: company_repo.rs  connection.rs  mod.rs  news_repo.rs  repo.rs  stock_repo.rs  stonker_repo.rs
server/src/websockets/: lobby.rs  messages.rs  mod.rs  start_connection.rs
src/: main.rs  schema.rs
src/endpoints/: company_endpoints.rs  mod.rs  stonker_endpoints.rs
src/models/: command.rs  company.rs  stonker.rs
src/repos/: company_repo.rs  connection.rs  mod.rs  stonker_repo.rs
utils/: Cargo.toml  data.tsql
utils/datasets/: large-stocks.csv  names.csv  stocks.csv
utils/datasets/news/: glue.csv  newspapers.csv  titles.csv
utils/src/: json.rs  lib.rs  mod.rs
utils/src/datagen/: command.rs  company.rs  generator.rs  history.rs  index_vec.rs  mod.rs  news.rs  stock.rs  stocks.rs  stonker.rs  stonkers.rs  trades.rs
utils/src/datagen/common/: generator.rs  index_vec.rs  mod.rs  tsql.rs
