[package]
name = "Rust-StockTradingSimulator"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = { version = "0.1.51", optional = true }
anyhow = { version = "1.0.45", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
actix-web = { version = "3", optional = true }
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono"], optional = true }
dotenv = { version = "0.15.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
diesel-derive-enum = { version = "0.4", features = ["postgres"], optional = true }
yew = { version = "0.18" }
strum_macros = { version = "0.22.0", optional = true }

[features]
server_deps = ["async-trait", "anyhow", "tokio","actix-web","diesel", "dotenv", "serde", "serde_json", "chrono", "diesel-derive-enum"]

#cargo build --bin client --target wasm32-unknown-unknown --features client_deps
#cargo run --bin server --features server
