[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.45"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utils = { path = "../utils" }
yew = "0.18"

[[bin]]
name = "client"
path = "src/mod.rs"