[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.45"
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.78"
yew = { version="0.18", features = ["toml", "yaml", "msgpack", "cbor", "web_sys"]}
yew-router = { version = "0.15", features = ["web_sys"]}
web-sys = "0.3"
yew_styles = { version="0.11", features = ["full"]}
stylist = "0.9"
utils = { path = "../utils" }

[[bin]]
name = "client"
path = "src/mod.rs"