[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = { version = "3" }
actix-cors = { version = "0.5.4" }
actix-web-actors = { version = "3" }
anyhow = { version = "1.0.45" }
chrono = { version = "0.4", features = ["serde"] }
async-trait = { version = "0.1.51" }
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
dotenv = { version = "0.15.0" }
env_logger = { version = "0.8.4" }
log = { version = "0.4.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
yew = { version = "0.18" }
utils = { path = "../utils" }

[[bin]]
name = "server"
path = "src/mod.rs"
