[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
actix-web-actors = "3"
anyhow = "1.0.45"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.51"
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.8.4"
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
utils = { path = "../utils" }

[[bin]]
name = "server"
path = "src/mod.rs"
