[package]
name = "utils"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.45"
csv = "1.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
strum = { version = "0.23", features = ["derive"] }
rand = "0.8.4"

[[bin]]
name = "utils"
path = "src/lib.rs"