[package]
name = "utils"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.45"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
rand = "0.8.4"
rand_distr = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
strum = { version = "0.23", features = ["derive"] }

[[bin]]
name = "utils"
path = "src/lib.rs"